# devops-agentic-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.obsidian/: graph.json  workspace.json
docs/api/: openapi.yaml
infra/pulumi/postgres/: .gitignore  Pulumi.yaml  index.ts  package-lock.json  package.json  tsconfig.json
services/agent-runtime/: Dockerfile  pyproject.toml
services/agent-runtime/src/: config.py  db.py  main.py
services/agent-runtime/src/engine/: graph.py  nodes.py  sandbox.py  state.py
services/agent-runtime/src/engine/sandbox_images/: Dockerfile.ci_cd  Dockerfile.infra
services/agent-runtime/src/engine/tools/: __init__.py  docker.py  factory.py  git.py  shell.py
services/agent-runtime/src/models/: agent.py
services/agent-runtime/src/routers/: agents.py
services/agent-runtime/src/schemas/: agent.py
services/agent-runtime/tests/: test_agent_execution.py  test_agents_crud.py  test_health.py  test_sandbox.py  test_security_audit.py
services/api-gateway/: .env.example  Dockerfile  SECURITY-AUDIT-REPORT.md  THROTTLE-REVIEW-REPORT.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
services/api-gateway/src/: app.module.spec.ts  app.module.ts  app.service.spec.ts  main.ts
services/api-gateway/src/auth/: auth.controller.spec.ts  auth.controller.ts  (+6 more)
services/api-gateway/test/: app.e2e-spec.ts  auth.e2e-spec.ts  edge-cases.e2e-spec.ts  qa-auth-triangle.e2e-spec.ts  qa_auth_scenarios.py  throttler.e2e-spec.ts
services/infra-orchestrator/: .gitignore  Dockerfile  Makefile  coverage.out  go.mod  go.sum
(+23 files in other folders)
